  * debian/patches/ubuntu_xdg-photo-dir.patch: Add new patch from Andrew
    Higginson, slightly modified, to default to update the user's default
    directory to XDG_PICTURES_DIR/Photos (localised) as the location to import
    pictures. Only applies to new users; existing users will see no change.
    (LP: #127315)

 -- Iain Lane <laney@ubuntu.com>  Sat, 29 Aug 2009 17:00:02 +0100

f-spot (0.6.0.0-1) unstable; urgency=low

  * New Upstream Version 0.6.0.0
   - no longer depends on libeog
   - fighting against deprecation, on the path to gnome3
   - new viewer widget
   - new widget showing folders organisation
   - new Preference dialog
   - db and config moved to .config (or whatever is pointed by xdg config)
   - tons of bugs fixed (really) (Closes: #534566, #449293, #479176, #305306,
     #537942, #418356) (LP: #77133, #290564, #298283, #379373, #405005, #116796,
     #178303, #355035, #368275)
   - updated translations
  * debian/control: Set Vcs-* to point to new Git locations
  * debian/control, debian/patches/*: Switch to quilt for patches, refresh all
    patches
  * debian/rules, debian/control: Rewrite in DH7 style (Closes: #531769)
  * debian/rules: Use ltmain-as-needed, modify LDFLAGS
  * debian/patches/99_ltmain_as-needed.dpatch: Drop, now applied in rules by
    copying from debian/
  * debian/patches/debian_unlink_nunit.dpatch: Drop, upstream now handles this
    case correctly by configure checks
  * debian/patches/debian_no_dup_app_icons.dpatch: Drop, upstream no longer
    ships svg icon
  * debian/patches/debian_link_2.0_profile_cairo.dpatch: Drop, fixed in mono
  * debian/patches/debian_dont_link_libmono.patch: Drop, ltmain-as-needed
    achieves this too
  * debian/patches/f-spot-import-gphoto.dpatch,
    debian/patches/svn-r4555_fix-crash-on-icon-size-change.dpatch,
    debian/patches/svn-r4545_locales-import.dpatch,
    debian/patches/debian_use_csc.dpatch,
    ubuntu_1024x600_CDExport.cs.dpatch,