@@ -20,8 +20,12 @@ f-spot (0.6.1.1-1) karmic; urgency=low
     directory to XDG_PICTURES_DIR/Photos (localised) as the location to import
     pictures. Only applies to new users; existing users will see no change.
     (LP: #127315)
+  * debian/rules: Remove leftover CDBS variables 
+  * debian/rules: Move f-spot-screensaver to /usr/lib/xscreensaver so it
+    actually works. Previously it was installed in /usr/libexec and so was not
+    found by gnome-screensaver. (Closes: #544204)
 
- -- Iain Lane <laney@ubuntu.com>  Sat, 29 Aug 2009 17:00:02 +0100
+ -- Iain Lane <laney@ubuntu.com>  Sat, 29 Aug 2009 18:08:28 +0100
 
 f-spot (0.6.0.0-1) unstable; urgency=low
 
